# threat-modelling-app

./: .coveragerc  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
src/: __init__.py
src/threat_modelling/: __init__.py  app.py  constants.py  utils.py
src/threat_modelling/configs/: post_digitalisation.json  pre_digitalisation.json
tests/threat_modelling/: dummy_lists.py  test_utils.py
