[aliases]
test = pytest

[tool:pytest]
addopts =
    --disable-pytest-warnings
    --color=yes

[metadata]
# Name of the package to install
name = threat_modelling

[mypy]
ignore_missing_imports = True
allow_redefinition = True

[options]
package_dir=
    =src
package=find:

[options.packages.find]
where=src